# Owl

./: .gitignore  pyproject.toml
OWL-Instruct/data/: sample.json
Translate/: TraduGrok.py  grok_multiple_choice.py  groq_instructions.py  processa_groq_instructions.py  testdotest.py  teste.py  translate_instructions_with_groq.py  translate_multiple_choice.py
translated/: multiple_choice_ptbr.csv  ops_data_ptbr.csv
